# rotors_simulator

rotors_control/: CMakeLists.txt
rotors_control/src/nodes/: lee_position_controller_fixnode.cpp  lee_position_controller_fixnode.h  lee_position_controller_nostop_node.cpp  lee_position_controller_nostop_node.h
rotors_description/urdf/: component_snippets.xacro  mav_with_vi_sensor.gazebo
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/launch/: mav_hovering_vi_sensor_gym_gazebo.launch  mav_with_planner.launch  willow_garage_gym_hovering.launch
rotors_gazebo/resource/: agent1_waypoints_basic.txt  agent1_waypoints_powerplant.txt  agent2_waypoints_basic.txt  agent2_waypoints_powerplant.txt  agent3_waypoints_basic.txt  agent4_waypoints_basic.txt  example_waypoints_powerplant.txt
rotors_gazebo/src/: global_planner.cpp  gym_hovering_example.cpp  waypoint_publisher_file.cpp
rotors_gazebo/worlds/: google_map.world  willowgarage.world
rotors_gazebo_plugins/src/: gazebo_motor_model.cpp  gazebo_octomap_plugin.cpp
rotors_planner/: CMakeLists.txt  package.xml
rotors_planner/CMakeModules/: FindCCD.cmake  FindEigen3.cmake  FindFCL.cmake
rotors_planner/cfg/: modelreset.cfg
rotors_planner/include/rotors_planner/: ManhattanOptimizationObjective.cpp  ManhattanOptimizationObjective.h  cl_rrt.h  cl_rrt_star.h  common.h  discretedmotionvalidator.cpp  discretedmotionvalidator.h  modelmotionvalidator.cpp  modelmotionvalidator.h
rotors_planner/launch/: four_mav_mpc_test.launch  mac_cl_rrt_star_lee_test.launch  mav_cl_rrt_lee_test.launch  mav_cl_rrt_mpc_test.launch  mav_cl_rrt_nlmpc_test.launch  mav_cl_rrt_star_lee_test.launch  mav_planner_vi_sensor.launch  mav_trajectory_test.launch  mav_unit_test.launch  mav_with_basicRRT_planer.launch  multi_mav_cl_rrt.launch  multi_mav_predicton.launch  power_plant_gym_hovering.launch  test.launch
rotors_planner/model/: simple_box.urdf
rotors_planner/resource/: powerplant_map_params.yaml  rrt_agent2.txt  rrt_agent3.txt  rrt_agent4.txt  willowgarage.bt  willowgarage_map_params.yaml
rotors_planner/scripts/: export.py  logger.py
rotors_planner/scripts/data/cl_rrt_dynamic_map/cl_rrt_dynamic_map_s7/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star/cl_rrt_star_s0/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star/cl_rrt_star_s1/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star/cl_rrt_star_s2/: config.json
rotors_planner/scripts/data/cl_rrt_star/cl_rrt_star_s5/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_dynamic_map/cl_rrt_star_dynamic_map_s0/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_mpc/cl_rrt_star_mpc_s0/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_static_map/cl_rrt_star_static_map_s7/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s0/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s1/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s2/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s3/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s4/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s5/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s6/: config.json  progress.txt
rotors_planner/scripts/data/cl_rrt_star_turbulence/cl_rrt_star_turbulence_s7/: config.json  progress.txt
rotors_planner/src/: CL_RRT_MAV.cpp  CL_RRT_test.cpp  CL_RRTstar_MAV.cpp  RRT_planner.cpp  cl_rrt.cpp  cl_rrt.h  mav_ode.h  rrt.cpp  rrt.h  statevalid.cpp
