<package>
  <name>rotors_planner</name>
  <version>2.1.1</version>

  <description>This package provides flyable trajectory for UAV which is in an environment with obstacles.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuzhengda@todo.todo">zhuzhengda</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rotors_planner</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author >Zhuzhengda</author>

<buildtool_depend>catkin</buildtool_depend>

<!-- Dependencies needed to compile this package. -->
<build_depend>gazebo_plugins</build_depend>
<build_depend>rotors_gazebo_plugins</build_depend>
<build_depend>mav_msgs</build_depend>
<build_depend>gazebo_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>octomap</build_depend>

<!-- Dependencies needed after this package is compiled. -->
<run_depend>gazebo_plugins</run_depend>
<run_depend>rotors_gazebo_plugins</run_depend>
<run_depend>mav_msgs</run_depend>
<run_depend>gazebo_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>octomap</run_depend>
</package>

